--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -131,7 +131,7 @@
                 table_maker(result.results, "request-table-container", table_headers_strings);
                 register_clicks();
             });
-            table_data_requester.query({ q_name: "office_requests" });
+            table_data_requester.query(new ajax_data("office_requests"));
         });
     </script>
 </head>
