--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -354,7 +354,7 @@
       <!--  -->
       <div class="header weight-800">Office</div>
 
-      <button onClick="updateRequest('ciaOOOOO', '2021-12-12', '2')">Click</button>
+      <button onClick="updateRequest('DONE', '2022-10-10', '2')">Click</button>
       <!--  -->
       <!-- Sub Header -->
       <!--  -->
