--- a/client/src/pages/office/office_create.html
+++ b/client/src/pages/office/office_create.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+    <title>Request Creation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="icon" href="../../assets/img/favicon.png" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/css/selectize.bootstrap4.min.css"/>
+
+    <link href="../../assets/css/common.css?13323323" rel="stylesheet" />
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.7/dist/latest/bootstrap-autocomplete.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script>$("head").load("../../components/head.html?1232123");</script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/js/standalone/selectize.min.js"></script>
 
+    <script src="../../assets/js/request.js?12232755543334"></script>
+    <script src="../../assets/js/generators.js?14575324253234"></script>
+    <script src="../../assets/js/record_edit.js?12553454374234"></script>
+    <script src="../../assets/js/append_img_request_state.js?71553254232534"></script>
+    <script src="../../assets/js/queries.js?13254575232534"></script>
     <script>
+        function autocomplete_init(codes, descriptions) {
+            const data = codes.map((code, index) => Object.fromEntries([["code", code], ["name", descriptions[index]]]))
+
+            $('#prod_code').selectize({
+                persist: false,
+                maxItems: 1,
+                valueField: 'code',
+                labelField: 'name',
+                searchField: ['code', 'name'],
+                options: data,
+                render: {
+                    item: function (item, escape) {
+                        return '<div>' +
+                            (item.name ? '<span class="name">' + escape(item.name) + '</span>' : '') +
+                            '</div>';
+                    },
+                    option: function (item, escape) {
+                        let label = item.name || item.code;
+                        return '<div>' +
+                            '<span class="label">' + escape(item.code) + '</span>' +
+                            '<div class="code-name-divider">|</div>' +
+                            '<span class="label">' + escape(item.name) + '</span>' +
+                            '</div>';
+                    }
+                },
+            });
+        }
         function set_date() {
             const now = new Date();
             const day = ("0" + now.getDate()).slice(-2);
@@ -24,15 +69,23 @@
             const product_flavour_requester = new Requester(function (result) {
                 console.log("printing flavours");
                 console.log(result);
+                flavour_builder(result.results.VARIANTE, "flavours-container")
             });
 
             const product_codes_requester = new Requester(function (result) {
                 console.log("all products:");
                 console.log(result);
+                autocomplete_init(result.results.COD_ARTICOLO, result.results.DESCRIZIONE)
             });
 
-            product_flavour_requester.query(new ajax_data("get_product_flavours", {"f.productCode": 11210}));
-            product_codes_requester.query(new ajax_data("get_products_names"));
+            product_flavour_requester.query({
+                q_name: "get_product_flavours",
+                q_data: {"f.productCode": 11210}
+            });
+            product_codes_requester.query({
+                q_name: "get_products_names"
+            });
+
         });
     </script>
 </head>
@@ -40,22 +93,10 @@
 <main role="main" class="container">
     <div class="header weight-800">Request creation<span class="blinker"></span></div>
     <div class="request-form">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
-
         <form class="form" role="form">
             <div class="row">
                 <label class="col-1 col-form-label">Product</label>
                 <div class="col">
-                    <input
-                            id="req_id"
-                            name="req_id"
-                            type="text"
-                            class="form-control"
-                            aria-describedby="req_idHelpBlock"
-                            required="required"
-                            readonly
-                            hidden
-                    />
                     <div class="row">
                         <div class="form-group col no-gutters">
                             <label class="col-12 col-form-label" for="prod_code">Product Code</label>
@@ -64,14 +105,7 @@
                                     <div class="input-group-prepend">
                                         <div class="input-group-text"><i class="fa fa-tag"></i></div>
                                     </div>
-                                    <input
-                                            id="prod_code"
-                                            name="prod_code"
-                                            type="text"
-                                            class="form-control"
-                                            aria-describedby="prod_codeHelpBlock"
-                                            required="required"
-                                    />
+                                    <select id="prod_code" name="prod_code" class="form-control" aria-describedby="prod_codeHelpBlock" required="required"></select>
                                 </div>
                                 <span id="prod_codeHelpBlock" class="form-text text-muted"
                                 >Insert a product code in the field and select the corresponding one.</span
@@ -101,49 +135,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="form-group col no-gutters">
-                            <label class="col-2">Flavour</label>
-                            <div class="col-12">
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input
-                                            name="flavour"
-                                            id="flavour_0"
-                                            type="radio"
-                                            aria-describedby="flavourHelpBlock"
-                                            required="required"
-                                            class="custom-control-input"
-                                            value="red"
-                                    />
-                                    <label for="flavour_0" class="custom-control-label">red</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input
-                                            name="flavour"
-                                            id="flavour_1"
-                                            type="radio"
-                                            aria-describedby="flavourHelpBlock"
-                                            required="required"
-                                            class="custom-control-input"
-                                            value="blue"
-                                    />
-                                    <label for="flavour_1" class="custom-control-label">blue</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input
-                                            name="flavour"
-                                            id="flavour_2"
-                                            type="radio"
-                                            aria-describedby="flavourHelpBlock"
-                                            required="required"
-                                            class="custom-control-input"
-                                            value="green"
-                                    />
-                                    <label for="flavour_2" class="custom-control-label">green</label>
-                                </div>
-                                <span id="flavourHelpBlock" class="form-text text-muted">Select the flavour of the product</span>
-                            </div>
-                        </div>
+                    <div class="row" id="flavours-container">
                     </div>
                 </div>
 
