Warehouse error message improved Removed some spans from homepage details Improved testing plan

--- a/client/src/pages/warehouse/warehouse_homepage_operator.html
+++ b/client/src/pages/warehouse/warehouse_homepage_operator.html
@@ -38,7 +38,7 @@
               warehouseCount(element.attr("id"), $("#counted_items").val(), result.results[0].requestState);
               location.reload();
             } else {
-              alert("No negatives numbers are accepted");
+              alert("No empty fields or negatives numbers are accepted");
             }
           });
 
