--- a/client/src/pages/office/office_create.html
+++ b/client/src/pages/office/office_create.html
@@ -50,8 +50,19 @@
                             '</div>';
                     }
                 },
+            }).on("change", function (e) {
+                update_fields($(this).val());
+            });
+
+        }
+
+        function update_fields(productId) {
+            document.product_flavour_requester.query({
+                q_name: "get_product_flavours",
+                q_data: {"f.productCode": productId}
             });
         }
+
         function set_date() {
             const now = new Date();
             const day = ("0" + now.getDate()).slice(-2);
@@ -66,23 +77,19 @@
         $("document").ready(() => {
             set_date();
 
-            const product_flavour_requester = new Requester(function (result) {
+            document.product_flavour_requester = new Requester(function (result) {
                 console.log("printing flavours");
                 console.log(result);
                 flavour_builder(result.results.VARIANTE, "flavours-container")
             });
 
-            const product_codes_requester = new Requester(function (result) {
+            document.product_codes_requester = new Requester(function (result) {
                 console.log("all products:");
                 console.log(result);
                 autocomplete_init(result.results.COD_ARTICOLO, result.results.DESCRIZIONE)
             });
 
-            product_flavour_requester.query({
-                q_name: "get_product_flavours",
-                q_data: {"f.productCode": 11210}
-            });
-            product_codes_requester.query({
+            document.product_codes_requester.query({
                 q_name: "get_products_names"
             });
 
