Modified mysql schema (dates from DATETIME to DATE) Modified doc Fixed bug when asking for recount Fixed UI showing right date format

--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/css/selectize.bootstrap4.min.css" />
 
-    <link href="../../assets/css/common.css?13323323" rel="stylesheet" />
+    <link href="../../assets/css/common.css?133332633323" rel="stylesheet" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -18,11 +18,11 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/js/standalone/selectize.min.js"></script>
 
-    <script src="../../assets/js/request.js?12232755543334"></script>
-    <script src="../../assets/js/generators.js?14575324253234"></script>
-    <script src="../../assets/js/record_edit.js?12553454374234"></script>
-    <script src="../../assets/js/append_img_request_state.js?71553254232534"></script>
-    <script src="../../assets/js/queries.js?13254575232534"></script>
+    <script src="../../assets/js/request.js?12232755655635436334"></script>
+    <script src="../../assets/js/generators.js?145765532534662653234"></script>
+    <script src="../../assets/js/record_edit.js?12555345436656374234"></script>
+    <script src="../../assets/js/append_img_request_state.js?71556565632354232534"></script>
+    <script src="../../assets/js/queries.js?132554573656655232534"></script>
     <script>
       function make_editable(element) {
         $("#edit-popup").show();
@@ -35,8 +35,11 @@
           const now = new Date();
           const day = ("0" + now.getDate()).slice(-2);
           const month = ("0" + (now.getMonth() + 1)).slice(-2);
-          const today = now.getFullYear() + "-" + month + "-" + day;
+          const today = day + "-" + month + "-" + now.getFullYear();
           var image_size = "40px";
+          //Format dates
+          var creationDate = result.results[0].requestDate.replace(" 00:00:00", "");
+          creationDate = creationDate.split("-")[1] + "-" + creationDate.split("-")[2] + "-" + creationDate.split("-")[0];
           //Product Info
           $("#prod_code").val(result.results[0].productCode);
           $("#prod_name").val(result.results[0].productName);
@@ -45,7 +48,8 @@
           $("#date_due").val(result.results[0].dueDate.split(" ")[0]).attr({
             min: today,
           });
-          $("#date_creation").val(result.results[0].requestDate);
+          $("#date_creation").val(creationDate);
+
           $("#count_previous").val(result.results[0].previousCount);
           $("#count_last").val(result.results[0].lastCount);
 
@@ -65,7 +69,7 @@
           });
           //Recount button
           $("#btn-recount").click((e) => {
-            officeRecount(element.attr("id"), $("#counted_items").val(), result.results[0].requestState);
+            officeRecount(element.attr("id"));
             location.reload();
           });
 
@@ -143,9 +147,9 @@
           PRODUCT: "productName",
           FLAVOUR: "productFlavour",
           NOTES: "notes",
-          "REQUEST DATE": "requestDate",
-          "DUE DATE": "dueDate",
-          "CLOSED DATE": "terminationDate",
+          "REQUEST DATE [dd/mm/yyyy]": "requestDate",
+          "DUE DATE [dd/mm/yyyy]": "dueDate",
+          "CLOSED DATE [dd/mm/yyyy]": "terminationDate",
           "LAST COUNT": "lastCount",
           "PREVIOUS COUNT": "previousCount",
         };
@@ -268,7 +272,7 @@
               <label class="col-1 col-form-label">Dates</label>
               <div class="row col-11">
                 <div class="form-group col no-gutters">
-                  <label for="date_due" class="col-12 col-form-label">Due Date</label>
+                  <label for="date_due" class="col-12 col-form-label">Due Date [mm/dd/yyyy]</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
@@ -290,7 +294,7 @@
                 </div>
 
                 <div class="form-group col no-gutters">
-                  <label for="date_creation" class="col-12 col-form-label">Creation Date</label>
+                  <label for="date_creation" class="col-12 col-form-label">Creation Date [mm/dd/yyyy]</label>
                   <div class="col-12">
                     <div class="input-group">
                       <div class="input-group-prepend">
