--- a/client/src/pages/office/office_create.html
+++ b/client/src/pages/office/office_create.html
@@ -2,15 +2,16 @@
 <html lang="it">
 <head>
     <title>Request Creation</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="icon" href="../../assets/img/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <link rel="icon" href="../../assets/img/favicon.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/css/selectize.bootstrap4.min.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/css/selectize.bootstrap4.min.css"/>
 
-    <link href="../../assets/css/common.css?13323323" rel="stylesheet" />
+    <link href="../../assets/css/common.css?13323323" rel="stylesheet"/>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -32,13 +33,13 @@
                 persist: false,
                 maxItems: 1,
                 valueField: 'code',
-                labelField: 'name',
+                labelField: 'code',
                 searchField: ['code', 'name'],
                 options: data,
                 render: {
                     item: function (item, escape) {
                         return '<div>' +
-                            (item.name ? '<span class="name">' + escape(item.name) + '</span>' : '') +
+                            (item.name ? '<span class="name">' + escape(item.code) + '</span>' : '') +
                             '</div>';
                     },
                     option: function (item, escape) {
@@ -54,7 +55,6 @@
                 const index = codes.indexOf($(this).val());
                 update_fields($(this).val(), descriptions[index]);
             });
-
         }
 
         function update_fields(productId, description) {
@@ -62,7 +62,8 @@
                 q_name: "get_product_flavours",
                 q_data: {"f.productCode": productId}
             });
-            $('prod').val(description);
+            console.log(description);
+            $('#prod_name').val(description);
         }
 
         function set_date() {
@@ -80,14 +81,17 @@
             set_date();
 
             document.product_flavour_requester = new Requester(function (result) {
-                console.log("printing flavours");
-                console.log(result);
-                flavour_builder(result.results.VARIANTE, "flavours-container")
+                console.log(result.results.VARIANTE);
+                if (!result.results.VARIANTE || !result.results.VARIANTE[0]) {
+                    flavour_builder(['.'], "flavours");
+                }
+                else {
+                    flavour_builder(result.results.VARIANTE, "flavours")
+                }
+
             });
 
             document.product_codes_requester = new Requester(function (result) {
-                console.log("all products:");
-                console.log(result);
                 autocomplete_init(result.results.COD_ARTICOLO, result.results.DESCRIZIONE)
             });
 
@@ -95,6 +99,27 @@
                 q_name: "get_products_names"
             });
 
+            document.request_create_sender = new Requester(function (result) {
+                //todo hide popup and refresh data
+            });
+
+            $('#create-form').submit((e) => {
+                e.preventDefault(); // avoid to execute the actual submit of the form.
+                const obj = {
+                    q_name: "get_products_names",
+                    q_data: {
+                        "d.requestDate": $('#date_creation').val(),
+                        "d.productCode": $('#prod_code').val(),
+                        "d.productName": $('#prod_name').val(),
+                        "d.productFlavour": $('#flavour').val(),
+                        "d.dueDate": $('#date_due').val(),
+                        "d.requestState": "countRequest",
+                        "d.notes": $('#notes').val()
+                    }
+                };
+                console.log(obj);
+                // document.request_create_sender.query();
+            });
         });
     </script>
 </head>
@@ -102,7 +127,7 @@
 <main role="main" class="container">
     <div class="header weight-800">Request creation<span class="blinker"></span></div>
     <div class="request-form">
-        <form class="form" role="form">
+        <form class="form" role="form" id="create-form">
             <div class="row">
                 <label class="col-1 col-form-label">Product</label>
                 <div class="col">
@@ -114,7 +139,8 @@
                                     <div class="input-group-prepend">
                                         <div class="input-group-text"><i class="fa fa-tag"></i></div>
                                     </div>
-                                    <select id="prod_code" name="prod_code" class="form-control" aria-describedby="prod_codeHelpBlock" required="required"></select>
+                                    <select id="prod_code" name="prod_code" class="form-control"
+                                            aria-describedby="prod_codeHelpBlock" required="required"></select>
                                 </div>
                                 <span id="prod_codeHelpBlock" class="form-text text-muted"
                                 >Insert a product code in the field and select the corresponding one.</span
@@ -122,7 +148,7 @@
                             </div>
                         </div>
                         <div class="form-group col no-gutters">
-                            <label for="prod" class="col-2 col-form-label">Product</label>
+                            <label for="prod_name" class="col-2 col-form-label">Product</label>
                             <div class="col-12">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -131,88 +157,78 @@
                                         </div>
                                     </div>
                                     <input
-                                            id="prod"
-                                            name="prod"
+                                            id="prod_name"
+                                            name="prod_name"
                                             type="text"
                                             class="form-control"
-                                            aria-describedby="prodHelpBlock"
+                                            aria-describedby="prod_nameHelpBlock"
                                             required="required"
                                             readonly
                                     />
                                 </div>
-                                <span id="prodHelpBlock" class="form-text text-muted">Automatically generated product name.</span>
+                                <span id="prod_nameHelpBlock" class="form-text text-muted">Automatically generated product name.</span>
                             </div>
                         </div>
                     </div>
                     <div class="row" id="flavours-container">
                     </div>
                 </div>
+            </div>
 
-                <div class="form-group row">
-                    <label for="notes" class="col-1 col-form-label">Notes</label>
-                    <div class="col-11">
-                        <textarea id="notes" name="notes" cols="40" rows="3" class="form-control" aria-describedby="notesHelpBlock"></textarea>
-                        <span id="notesHelpBlock" class="form-text text-muted">Add notes to this request</span>
-                    </div>
+            <div class="form-group row">
+                <label for="notes" class="col-1 col-form-label">Notes</label>
+                <div class="col-11">
+                    <textarea id="notes" name="notes" cols="40" rows="3" class="form-control"
+                              aria-describedby="notesHelpBlock"></textarea>
+                    <span id="notesHelpBlock" class="form-text text-muted">Add notes to this request</span>
                 </div>
-                <div class="form-group row">
-                    <input
-                            hidden
-                            id="date_creation"
-                            name="date_creation"
-                            type="text"
-                            aria-describedby="date_creationHelpBlock"
-                            required="required"
-                            class="form-control"
-                            readonly
-                    />
-                </div>
-                <div class="form-group row">
-                    <label for="date_due" class="col-1 col-form-label">Due Date</label>
-                    <div class="col-11">
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text">
-                                    <i class="fa fa-calendar"></i>
-                                </div>
+            </div>
+            <div class="form-group row">
+                <input
+                        hidden
+                        id="date_creation"
+                        name="date_creation"
+                        type="text"
+                        aria-describedby="date_creationHelpBlock"
+                        required="required"
+                        class="form-control"
+                        readonly
+                />
+            </div>
+            <div class="form-group row">
+                <label for="date_due" class="col-1 col-form-label">Due Date</label>
+                <div class="col-11">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="fa fa-calendar"></i>
                             </div>
-                            <input
-                                    id="date_due"
-                                    name="date_due"
-                                    type="date"
-                                    class="form-control"
-                                    aria-describedby="date_dueHelpBlock"
-                                    required="required"
-                            />
                         </div>
-                        <span id="date_dueHelpBlock" class="form-text text-muted">Date before which the counting should be completed</span>
+                        <input
+                                id="date_due"
+                                name="date_due"
+                                type="date"
+                                class="form-control"
+                                aria-describedby="date_dueHelpBlock"
+                                required="required"
+                        />
                     </div>
-                </div>
-                <div class="form-group row">
-                    <input
-                            hidden
-                            id="status"
-                            name="status"
-                            type="text"
-                            class="form-control"
-                            aria-describedby="statusHelpBlock"
-                            required="required"
-                            readonly
-                    />
+                    <span id="date_dueHelpBlock" class="form-text text-muted">Date before which the counting should be completed</span>
                 </div>
             </div>
+    </div>
 
-            <div class="form-group row col-12 justify-content-evenly">
-                <button name="submit" type="submit" class="col-5 styled-btn btn-blue">Create</button>
-                <a
-                        name="submit"
-                        type="submit"
-                        class="col-5 styled-btn btn-red-dark text-align-center no-text-decoration"
-                        href="office_homepage.html"
-                >Back</a
-                >
-            </div>
-        </form>
+    <div class="form-group row col-12 justify-content-evenly">
+        <button name="submit" type="submit" class="col-5 styled-btn btn-blue">Create</button>
+        <a
+                name="submit"
+                type="submit"
+                class="col-5 styled-btn btn-red-dark text-align-center no-text-decoration"
+                href="office_homepage.html"
+        >Back</a
+        >
+    </div>
+    </form>
     </div>
 </main>
 </body>
