--- a/client/src/pages/office/office_create.html
+++ b/client/src/pages/office/office_create.html
@@ -58,6 +58,7 @@
         }
 
         function update_fields(productId, description) {
+
             document.product_flavour_requester.query({
                 q_name: "get_product_flavours",
                 q_data: {"f.productCode": productId}
@@ -83,10 +84,10 @@
             document.product_flavour_requester = new Requester(function (result) {
                 console.log(result.results.VARIANTE);
                 if (!result.results.VARIANTE || !result.results.VARIANTE[0]) {
-                    flavour_builder(['.'], "flavours");
+                    flavour_builder(['.'], "flavours-container");
                 }
                 else {
-                    flavour_builder(result.results.VARIANTE, "flavours")
+                    flavour_builder(result.results.VARIANTE, "flavours-container")
                 }
 
             });
