--- a/client/src/pages/warehouse/warehouse_homepage_operator.html
+++ b/client/src/pages/warehouse/warehouse_homepage_operator.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/css/selectize.bootstrap4.min.css" />
 
-    <link href="../../assets/css/common.css?631353323323" rel="stylesheet" />
+    <link href="../../assets/css/common.css?6313523" rel="stylesheet" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -18,16 +18,16 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/js/standalone/selectize.min.js"></script>
 
-    <script src="../../assets/js/request.js?1223273565655436334"></script>
-    <script src="../../assets/js/generators.js?1457653632452653234"></script>
-    <script src="../../assets/js/record_edit.js?125653645436754234"></script>
-    <script src="../../assets/js/append_img_request_state.js?7156566533254232534"></script>
-    <script src="../../assets/js/queries.js?1325453765526326534"></script>
+    <script src="../../assets/js/request.js?1223436334"></script>
+    <script src="../../assets/js/generators.js?14573234"></script>
+    <script src="../../assets/js/record_edit.js?125234"></script>
+    <script src="../../assets/js/append_img_request_state.js?71565534"></script>
+    <script src="../../assets/js/queries.js?132534"></script>
     <script>
       function make_editable(element) {
         $("#edit-popup").show();
-        const popup = $("#popup-data");
-        popup.attr("id", element.attr("id"));
+        $("#popup").removeClass();
+        $("#popup").addClass(element.attr("id"));
 
         //For popup
         const table_data_requester = new Requester(function (result) {
@@ -51,14 +51,6 @@
 
           //Hide all buttons before selecting which to show counted_items
           $("#btn-count").hide();
-          $("#btn-count").click((e) => {
-            if ($.isNumeric($("#counted_items").val()) && $("#counted_items").val() > 0) {
-              warehouseCount(element.attr("id"), $("#counted_items").val(), result.results[0].requestState);
-              location.reload();
-            } else {
-              alert("No empty fields or negatives numbers are accepted");
-            }
-          });
 
           //RequestState
           $("#req_id").val(element.attr("id"));
@@ -104,6 +96,22 @@
       $(document).ready(function () {
         $("#edit-popup").hide();
 
+        $("#btn-count").click((e) => {
+          if ($.isNumeric($("#counted_items").val()) && $("#counted_items").val() > 0) {
+            console.log($("#popup").attr("class"));
+            console.log($("#counted_items").val());
+            if ($("#img_request_state").children("img").attr("title") == "Asked for count" || "Asked for recount") {
+              warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "countRequest");
+              location.reload();
+            } else if ($("#img_request_state").children("img").attr("title") == "Asked for recount") {
+              warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "recountRequest");
+              location.reload();
+            }
+          } else {
+            alert("No empty fields or negatives numbers are accepted");
+          }
+        });
+
         const table_headers_strings = {
           STATUS: "requestState",
           PRODUCT: "productName",
@@ -127,7 +135,7 @@
       <!-- Popup -->
       <!--  -->
       <div id="edit-popup" class="popup-container">
-        <div class="popup">
+        <div id="popup">
           <div class="card-section exit-button-wrapper">
             <div class="card-header-title">Details</div>
             <div class="exit-button">&times;</div>
